--- a/GerenciadorCondominiosProj/GerenciadorCondominios.csproj
+++ b/GerenciadorCondominiosProj/GerenciadorCondominios.csproj
@@ -9,4 +9,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GerenciadorCondominios.BLL\GerenciadorCondominios.BLL.csproj" />
+    <ProjectReference Include="..\GerenciadorCondominios.DAL\GerenciadorCondominios.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
