Criação Modelo de dados

--- a/GerenciadorCondominiosProj/appsettings.json
+++ b/GerenciadorCondominiosProj/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
+  "ConnectionStrings": {
+    "DbSqlServer": "Data Source=DESKTOP-5M8GTGH;Initial Catalog=GerenciadorCondominiosDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+
   "AllowedHosts": "*"
 }
