--- a/GerenciadorCondominios.DAL/GerenciadorCondominios.DAL.csproj
+++ b/GerenciadorCondominios.DAL/GerenciadorCondominios.DAL.csproj
@@ -5,9 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Mappings\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.17" />
   </ItemGroup>
 
   <ItemGroup>
