--- a/GerenciadorCondominiosProj/GerenciadorCondominios.csproj
+++ b/GerenciadorCondominiosProj/GerenciadorCondominios.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\GerenciadorCondominios.DAL\GerenciadorCondominios.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Imagens\" />
+  </ItemGroup>
+
 </Project>
